# TODO-list-FastApi-

./: .gitignore  README.md  pyproject.toml
app/: auth.py  config.py  constants.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/auth/: auth.py
app/db/mongo/: __init__.py  client.py
app/db/postgres/: config.py  models.py  session.py
app/repositories/: __init__.py  base.py  tasks.py  users.py
app/routers/: exceptions.py  notes.py  tasks.py  users.py
app/schemas/: __init__.py  notes.py  tasks.py  users.py
app/utils/: dependencies.py  exceptions.py
migrations/: env.py
migrations/versions/: 11b22a2df261_initial_migration.py
